# RiderDispatchSimulationSystem

./: PRD_CN.md  PRD_EN.md  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: lastfailed
dispatch_sim/: __init__.py  cli.py  engine.py  metrics.py  models.py  path_planner.py  scheduler.py
tests/: test_engine.py  test_scheduler.py
